<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC000000"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:weightSum="100" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="100" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="70"
            android:background="#FFFFFFFF"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:weightSum="40" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="16"
                android:gravity="center"
                android:text="@string/what_your_name"
                android:textColor="#FF000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8"
                android:hint="@string/your_name"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textColor="#FF000000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8"
                android:orientation="horizontal"
                android:weightSum="2" >

                <Button
                    android:id="@+id/btnDismiss"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:text="@string/dismiss"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnConfirm"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/confirm"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>