<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFCACACA" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#FF000000"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imgTakePicture"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/picture_icon" />
    </RelativeLayout>

    <ListView
        android:id="@+id/chatMessagesListview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="65dp"
        android:layout_marginTop="50dp"
        android:background="#FFFFFFFF"
        android:cacheColorHint="@android:color/transparent"
        android:listSelector="@android:color/transparent"
        android:padding="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:background="#FFCACACA"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="100" >

        <EditText
            android:id="@+id/txtMessage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="70"
            android:hint="@string/write_something"
            android:paddingLeft="5dp"
            android:textColor="#FF000000" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="30"
            android:text="@string/send" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgPreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC000000"
        android:visibility="gone" />

</RelativeLayout>